Manifests/Service.yml
apiVersion: v1
kind: Service
metadata:
  name: app-migration-frontend
spec:
  selector:
    app: app-migration-frontend
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
